--- a/src/styles/dashboardPage.css
+++ b/src/styles/dashboardPage.css
@@ -52,24 +52,28 @@
 }
 
 /* 상단 차트 종류 선택 슬라이드  */
-.chart-type-selector .chart-icon-button {
-    padding: 0.5em 1em;
-    border: none;
-    background-color: #f8f8f8;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 .chart-type-selector {
     height: 15vh;
     display: flex;
     align-items: center;
-    gap: 1.2vw;
+    gap: 1vw;
     padding: 1vw;
     overflow-x: auto;
     overflow-y: auto;
     white-space: nowrap;
     scrollbar-width: none; /* Firefox */
+}
+
+.chart-type-selector .chart-icon-button {
+    width: 10vw;
+    height: 100%;
+    padding: 1vw;
+    border: none;
+    background-color: #ffffff;
+    border: 0.5px solid #d2d2d2;
+    box-shadow: 4px 4px 5px rgba(204, 204, 204, 0.5); /* 그림자 효과 */
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .chart-type-selector::-webkit-scrollbar {
@@ -116,7 +120,7 @@
     width: 100%;
     margin-bottom: 2vh;
     line-height: 8vh;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
 }
 
 .boards {
@@ -265,7 +269,7 @@
 /* 서이 : 클릭해서 속성옵션 선택된 상태 */
 .attribute-options button.selected {
     background: #1976d2;
-    color: #fff;
+    color: #ffffff;
     border-color: #1976d2;
     filter: none;
 }
