--- a/src/styles/dashboardPage.css
+++ b/src/styles/dashboardPage.css
@@ -106,10 +106,9 @@
 .chart-board {
     /* flex: 0 0 75%; */
     width: 100%;
-    /* 전체 차트 영역 높이 비율 */
     padding: 0 1vw;
-    background-color: #ffffff;
     box-sizing: border-box;
+    /* background-color: #4f41af; */
 }
 
 .chart-board .board-title {
@@ -120,7 +119,6 @@
     width: 100%;
     margin-bottom: 2vh;
     line-height: 8vh;
-    /* background-color: #f9f9f9; */
 }
 
 .chart-board .boards {
@@ -144,7 +142,7 @@
     font-size: 1.1rem;
     transition: background-color 0.3s ease, transform 0.2s ease;
     cursor: pointer;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     box-shadow: 3px 3px 4px rgba(204, 204, 204, 0.5);
 }
 
@@ -167,30 +165,31 @@
     width: 80%;
 }
 
-.color-slider-container-vertical {
-    height: 80vh;
-    width: 180px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+/* -----------ColorChip-----------  */
+.color-chips-container {
+    width: 7vw;
+    height: 100%;
+    display: grid;
+    /* row-gap: 0; */
+    padding: 0;
+    box-sizing: border-box;
+    background: #ffffff;
+    border: 1px solid #e5e7eb;
+    border-radius: 0;
+    box-shadow: 0 10px 28px rgba(0, 0, 0, 0.08);
 }
 
-.color-slider-vertical {
+.color-chips {
+    border-radius: radius;
+    border: 1px solid rgba(0, 0, 0, 0.08);
     display: flex;
-    flex-direction: column;
     align-items: center;
-    /* gap: 1vh; */
-    perspective: 1000px;
-}
-
-.color-block {
-    width: 140px;
-    height: 70px;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-    background: linear-gradient(to right, #ccc, #eee);
-    box-shadow: 0 4px 20px -5px rgba(0, 0, 0, 1);
+    justify-content: center;
+    font-family: ui-monospace, Menlo, Consolas, monospace;
+    font-size: 10pt;
+    /* font-weight: 700; */
+    user-select: none;
+    cursor: pointer;
 }
 
 /* -----------설정 보드 20%----------- */
